add migration file for seed data, fix errors in quotes messages and complete endpoint

--- a/OrderManagement.Infrastructure/Email/EmailTemplate.html
+++ b/OrderManagement.Infrastructure/Email/EmailTemplate.html
@@ -8,7 +8,7 @@
     <h2>Thank you for your order, {{CustomerName}}!</h2>
     <p>Your order <strong>#{{OrderId}}</strong> has been successfully created.</p>
     <p>Total amount: <strong>{{TotalAmount}}</strong></p>
-    <p>We will notify you when your items are shipped.</p>
+    <p>We will notify you when your items are shipped :) :).</p>
     <hr>
     <p style="font-size: 12px; color: #777;">Order Management System</p>
 </body>
