add endpoitn get for tracking errors in SeriLog

--- a/OrderManagement.Infrastructure/Email/EmailTemplate.html
+++ b/OrderManagement.Infrastructure/Email/EmailTemplate.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Order Confirmation</title>
+    <title>Confirmacion de Orden</title>
 </head>
 <body style="font-family: Arial, sans-serif; color: #333;">
-    <h2>Thank you for your order, {{CustomerName}}!</h2>
-    <p>Your order <strong>#{{OrderId}}</strong> has been successfully created.</p>
-    <p>Total amount: <strong>{{TotalAmount}}</strong></p>
-    <p>We will notify you when your items are shipped :) :).</p>
+    <h2>Gracias por tu orden, {{CustomerName}}!</h2>
+    <p>Tu Orden <strong>#{{OrderId}}</strong> se creo correctamente.</p>
+    <p>Monto Total: <strong>{{TotalAmount}}</strong></p>
+    <p>Te avisaremos cuando se envie :) :).</p>
     <hr>
     <p style="font-size: 12px; color: #777;">Order Management System</p>
 </body>
